Add new email templates for account management and payment notifications
- Introduced several new HTML email templates for account management, including notifications for account blocking, rejection, creation, and approval, enhancing communication clarity for doctors.
- Added payment-related templates for confirming payments and providing payment links, improving user engagement and transaction transparency.
- Each template features a modern layout with responsive design elements, ensuring readability across devices.
- Included dynamic placeholders for personalized information, enhancing the communication experience for recipients.

--- a/src/templates/leh-email-template.ejs
+++ b/src/templates/leh-email-template.ejs
@@ -423,7 +423,7 @@
                                                                                     style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;"
                                                                                     width=230 height=98.15078236130867
                                                                                     alt=""
-                                                                                    src="https://e0da57a6-b49a-4d75-b8d7-1f3b5c7fa93c.b-cdn.net/e/615dd2a7-1e22-49f1-9a12-0f9f14fb4747/29bc96f8-522f-42f8-a55d-b4b3fd172eaa.jpeg" /></a>
+                                                                                    src="https://public-consumables.s3.eu-west-2.amazonaws.com/LEH+Logo.jpg" /></a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -535,6 +535,51 @@
                                 </td>
                               </tr>
                               <tr>
+                                <td align=center>
+                                  <table class=t35 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t34 style="width:467px;">
+                                        <table class=t33 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t32>
+                                              <p class=t31
+                                                style="margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:14px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                To complete your registration process, please use the following Patient ID:</p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t35 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t34 style="width:467px;">
+                                        <table class=t33 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t32>
+                                              <p class=t31
+                                                style="margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:14px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                <span
+                                                class=t16
+                                                style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">PNT456738</span>
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
                                 <td>
                                   <div class=t87
                                     style="mso-line-height-rule:exactly;mso-line-height-alt:31px;line-height:31px;font-size:1px;display:block;">
@@ -551,7 +596,7 @@
                                           style="width:100%;">
                                           <tr>
                                             <td class=t88
-                                              style="overflow:hidden;background-image:url(https://e0da57a6-b49a-4d75-b8d7-1f3b5c7fa93c.b-cdn.net/e/615dd2a7-1e22-49f1-9a12-0f9f14fb4747/9c1a8850-9942-4640-9b5d-3d402abbd53b.png);background-repeat:repeat;background-size:auto;background-position:center center;border-radius:16px 16px 16px 16px;">
+                                              style="overflow:hidden;background-image:url(http://public-consumables.s3.eu-west-2.amazonaws.com/Web+Container.png);background-repeat:repeat;background-size:auto;background-position:center center;border-radius:16px 16px 16px 16px;">
                                               <table role=presentation width=100% cellpadding=0 cellspacing=0
                                                 style="width:100% !important;">
                                                 <tr>
@@ -750,7 +795,7 @@
                                                                                     style="display:block;border:0;height:auto;width:100%;Margin:0;max-width:100%;"
                                                                                     width=217.421875
                                                                                     height=181.33160425101215 alt=""
-                                                                                    src="https://e0da57a6-b49a-4d75-b8d7-1f3b5c7fa93c.b-cdn.net/e/615dd2a7-1e22-49f1-9a12-0f9f14fb4747/812f6c94-86b0-4555-aa52-c241899ecebc.png" /></a>
+                                                                                    src="https://public-consumables.s3.eu-west-2.amazonaws.com/Email+graphic.png" /></a>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -841,7 +886,7 @@
                                             <td class=t94>
                                               <p class=t92
                                                 style="margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Need help? Reach out at support@londonelitehealth.com or call at
+                                                Need help? Reach out at info@londonelitehealth.com or call at
                                                 +442081545588.</p>
                                             </td>
                                           </tr>
@@ -1011,7 +1056,7 @@
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
                                                                                 <p class=t122
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  support@londonelitehealth.com</p>
+                                                                                  info@londonelitehealth.com</p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
