--- a/src/templates/pharmacist-with-sign.ejs
+++ b/src/templates/pharmacist-with-sign.ejs
@@ -332,7 +332,7 @@
     <div class="pdf-container">
         <div class="header">
             <div class="header-left">
-                <img src="https://d2en3yjhr69gmk.cloudfront.net/common/WebLogo.svg" alt="SendScript">
+                <img src="https://d2x163e8fostr4.cloudfront.net/common/WebLogo.svg" alt="SendScript">
                 <div class="header-title">Private Prescription</div>
             </div>
 
@@ -399,7 +399,7 @@
 
             <!-- Appointment Details -->
             <div class="details-box">
-                <div class="details-heading">Appointment Details</div>
+                <div class="details-heading">Prescription Details</div>
                 <div class="appointment-details">
                     <p><strong>Prescription ID:</strong> <span>
                             <%= prescription_id %>
