--- a/src/templates/doctor-account-creation.ejs
+++ b/src/templates/doctor-account-creation.ejs
@@ -529,7 +529,7 @@
                                             <td class=t40>
                                               <p class=t38
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear User,<br />Thank you for registering with Sendscript.<br />
+                                                Dear <%= doctor_name %>,<br />Thank you for registering with Sendscript.<br />
                                                 To complete your account setup, please verify your email address by entering the code below:
                                               </p>
                                             </td>
